[gd_scene load_steps=24 format=2]

[ext_resource path="res://Resources/Fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Containers/PomodoroTimer.gd" type="Script" id=2]
[ext_resource path="res://Resources/Styles/RegularFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Icons/stop.png" type="Texture" id=4]
[ext_resource path="res://Resources/Icons/replay.png" type="Texture" id=5]
[ext_resource path="res://Resources/Icons/play.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.313726, 0.639216, 0.376471, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.2, 0.4, 0.235294, 1 )
border_width_left = 3
border_width_top = 3
border_color = Color( 0.313726, 0.639216, 0.376471, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.345098, 0.721569, 0.419608, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.345098, 0.721569, 0.419608, 1 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.431373, 0.419608, 0.4, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.321569, 0.313726, 0.305882, 1 )
border_width_left = 3
border_width_top = 3
border_color = Color( 0.592157, 0.592157, 0.592157, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.588235, 0.572549, 0.54902, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.529412, 0.505882, 0.505882, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.505882, 0.278431, 0.278431, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.447059, 0.247059, 0.247059, 1 )
border_width_left = 3
border_width_top = 3
border_color = Color( 0.8, 0.435294, 0.435294, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.584314, 0.317647, 0.317647, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.584314, 0.317647, 0.317647, 1 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 250
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=10]
resource_name = "m_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Foreground/BackgroundM:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground/BackgroundM/LabelM:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "mm_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Foreground/BackgroundMm:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground/BackgroundMm/LabelMm:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "s_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Foreground/BackgroundS:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground/BackgroundS/LabelS:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "s_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Foreground/BackgroundSs:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground/BackgroundSs/LabelSs:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}

[node name="PomodoroTimer" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -29.0
margin_bottom = -29.0
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
margin_left = -562.0
margin_top = -165.0
margin_right = 579.0
margin_bottom = 281.0
custom_styles/panel = SubResource( 22 )

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -91.5
margin_top = 209.0
margin_right = -31.5
margin_bottom = 263.0
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
icon = ExtResource( 6 )
icon_align = 1

[node name="ReplayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.5
margin_top = 209.0
margin_right = 39.5
margin_bottom = 263.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
icon = ExtResource( 5 )
icon_align = 1

[node name="StopButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 47.5
margin_top = 209.0
margin_right = 107.5
margin_bottom = 263.0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
icon = ExtResource( 4 )
icon_align = 1

[node name="Foreground" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -558.0
margin_top = -158.0
margin_right = 575.0
margin_bottom = 196.0
custom_styles/panel = SubResource( 8 )

[node name="BackgroundM" type="Panel" parent="Foreground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -536.5
margin_top = -156.5
margin_right = -290.5
margin_bottom = 151.5
rect_pivot_offset = Vector2( 123, 154 )
custom_styles/panel = SubResource( 6 )

[node name="LabelM" type="Label" parent="Foreground/BackgroundM"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -152.5
margin_right = 102.0
margin_bottom = 152.5
rect_pivot_offset = Vector2( 102, 152 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="BackgroundMm" type="Panel" parent="Foreground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.5
margin_top = -156.5
margin_right = -36.5
margin_bottom = 151.5
rect_pivot_offset = Vector2( 123, 154 )
custom_styles/panel = SubResource( 6 )

[node name="LabelMm" type="Label" parent="Foreground/BackgroundMm"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -152.5
margin_right = 102.0
margin_bottom = 152.5
rect_pivot_offset = Vector2( 102, 152 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="LabelColon" type="Label" parent="Foreground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -202.0
margin_right = 101.5
margin_bottom = 165.0
custom_fonts/font = SubResource( 2 )
text = ":"
align = 1
valign = 1

[node name="BackgroundS" type="Panel" parent="Foreground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 33.5
margin_top = -156.5
margin_right = 279.5
margin_bottom = 151.5
rect_pivot_offset = Vector2( 123, 154 )
custom_styles/panel = SubResource( 6 )

[node name="LabelS" type="Label" parent="Foreground/BackgroundS"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -152.5
margin_right = 102.0
margin_bottom = 152.5
rect_pivot_offset = Vector2( 102, 152 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="BackgroundSs" type="Panel" parent="Foreground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 286.5
margin_top = -156.5
margin_right = 532.5
margin_bottom = 151.5
rect_pivot_offset = Vector2( 123, 154 )
custom_styles/panel = SubResource( 6 )

[node name="LabelSs" type="Label" parent="Foreground/BackgroundSs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -152.5
margin_right = 102.0
margin_bottom = 152.5
rect_pivot_offset = Vector2( 102, 152 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
clip_text = true

[node name="PomodoroTimer" type="Timer" parent="."]
wait_time = 125.0

[node name="ControllerTimer" type="Timer" parent="."]

[node name="AnimationPlayerM" type="AnimationPlayer" parent="."]
anims/m_anim = SubResource( 10 )

[node name="AnimationPlayerMm" type="AnimationPlayer" parent="."]
anims/mm_anim = SubResource( 11 )

[node name="AnimationPlayerS" type="AnimationPlayer" parent="."]
anims/s_anim = SubResource( 12 )

[node name="AnimationPlayerSs" type="AnimationPlayer" parent="."]
anims/ss_anim = SubResource( 9 )

[connection signal="timeout" from="PomodoroTimer" to="." method="_on_PomodoroTimer_timeout"]
[connection signal="timeout" from="ControllerTimer" to="." method="_on_ControllerTimer_timeout"]
